tests/ui/consts/const-eval/ref_to_int_match.64bit.stderr
error[E0080]: unable to turn pointer into integer
  --> $DIR/ref_to_int_match.rs:24:27
   |
LL | const BAR: Int = unsafe { Foo { r: &42 }.f };
   |                           ^^^^^^^^^^^^^^^^ evaluation of `BAR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
